--- a/.github/workflows/deploy-to-dev.yml
+++ b/.github/workflows/deploy-to-dev.yml
@@ -27,7 +27,7 @@ jobs:
           script_stop: false
           script: |
             cd ${{ secrets.PATH }}
-            docker compose stop Api-Ruta3
+            docker compose stop api-ruta3
             docker compose rm -f
       - name: Run docker compose
         uses: appleboy/ssh-action@master
@@ -38,5 +38,5 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd ${{ secrets.PATH }}
-            docker compose build Api-Ruta3
+            docker compose build api-ruta3
             docker compose up -d
